ingress/metabase-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metabase-ingress
  namespace: metabase
spec:
  ingressClassName: nginx
  rules:
    - host: dataplatform.metabase.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metabase-service
                port:
                  number: 3000
