ingress/mongoexpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongoexpress-ingress
  namespace: mongodb
spec:
  ingressClassName: nginx
  rules:
    - host: dataplatform.mongoexpress.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongoexpress-service
                port:
                  number: 8081
