ingress/nifi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nifi-ingress
  namespace: nifi
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: dataplatform.nifi.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nifi
                port:
                  number: 8443
