ingress/shell-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shell-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: dataplatform.shell.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shell-service
                port:
                  number: 3000
